--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,41 @@ h1, h2, h3 {
 .separator {
     margin: 0px 26px;
 }
+
+.featured {
+    margin-top: 33px;
+    margin-bottom: 38px;
+}
+
+.title__category {
+    font-size: 22px;
+    color: #21243D;
+}
+
+.featured__works {
+    margin-top: 35px;
+}
+
+.work {
+    display: flex;
+}
+
+.work__img-wrap {
+    width: 246px;
+    height: 180px;
+    border-radius: 6px;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+.work__img {
+    width: 100%;
+    height: 100%;
+}
+
+.work__text {
+width: 594px;
+height: 93px;
+left: 410px;
+top: 1188px;
+color: #21243D;
+}
