--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,15 @@
      padding: 0 5px;
  }
 
+ .title {
+     font-weight: 700;
+     font-size: 44px;
+     line-height: 1.26;font-weight: 700;
+     font-size: 44px;
+     line-height: 60px;
+     color: #21243D;
+ }
+
  .header {
      padding: 30px 0px;
  }
@@ -241,6 +250,8 @@
 
  .work__subtitle {
      display: flex;
+     align-items: center;
+     margin: 18px;
  }
 
  .work__date {
@@ -252,6 +263,7 @@
      color: #FFFFFF;
      padding: 5px 10px;
  }
+
 
  @media (max-width: 480px) {
      .featured {
@@ -284,4 +296,73 @@
 
  .work__text {
      color: #21243D;
+     margin-left: 18px;
+ }
+  
+.blogs {
+    margin-top: 35px;
+}
+
+ .blog {
+    border-bottom: 1px solid #E0E0E0 ;
+    padding: 35px 0;
+ }
+
+ .ds {
+  color: #8695A4;
+ }
+
+ .blog__name {
+    margin-bottom: 40px;
+ }
+ 
+ .footer {
+     padding: 51px 0px 54px;
+ }
+
+ .footer__container {
+     display: flex;
+     align-items: center;
+     flex-direction: column;
+ }
+
+ .social__item {
+     width: 30px;
+     height: 30px;
+     overflow: hidden;
+     margin-right: 35px;
+ }
+
+ .social {
+     display: flex;
+ }
+
+ .social__item:last-child {
+     margin-right: 0px;
+ }
+
+ .social__link {
+     display: block;
+     height: 100%;
+     width: 100%;
+     font-size: 0px;
+     background-size: cover;
+      background-repeat: no-repeat;
+ }
+
+ .vk {
+     background-image: url(../img/icons/vk.png);
+     
+ }
+
+ .telegram {
+    background-image: url(../img/icons/telegram.png);
+ }
+
+ .github {
+    background-image: url(../img/icons/github.png);
+ }
+
+ .ok {
+    background-image: url(../img/icons/ok.png);
  }
