--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
  }
 
  body {
-     font-family: 'Roboto', sans-serif;
+     font-family: 'Heebo', sans-serif;
      font-size: 16px;
      line-height: 1.42;
  }
@@ -48,7 +48,8 @@
  .title {
      font-weight: 700;
      font-size: 44px;
-     line-height: 1.26;font-weight: 700;
+     line-height: 1.26;
+     font-weight: 700;
      font-size: 44px;
      line-height: 60px;
      color: #21243D;
@@ -71,30 +72,34 @@
      align-items: center;
  }
 
- .header__burger-el {
-     height: 2px;
-     width: 100%;
-     background-color: #21243D;
-     position: relative;
- }
+ @media (max-width: 480px) {
 
- .header__burger-el::before,
- .header__burger-el::after {
-     height: 2px;
-     width: 100%;
-     background-color: #21243D;
-     position: absolute;
- }
+     .header__burger-el {
+         height: 2px;
+         width: 100%;
+         background-color: #21243D;
+         position: relative;
+     }
+
+     .header__burger-el::before,
+     .header__burger-el::after {
+         height: 2px;
+         width: 100%;
+         background-color: #21243D;
+         position: absolute;
+     }
 
 
- .header__burger-el::before {
-     content: "";
-     top: -8px;
- }
+     .header__burger-el::before {
+         content: "";
+         top: -8px;
+     }
 
- .header__burger-el::after {
-     content: "";
-     bottom: -8px;
+     .header__burger-el::after {
+         content: "";
+         bottom: -8px;
+     }
+
  }
 
  .nav__list {
@@ -102,6 +107,10 @@
      font-style: normal;
      font-weight: 500;
      font-size: 20px;
+ }
+
+ .nav__item {
+     padding-left: 33px;
  }
 
  @media (max-width: 480px) {
@@ -119,6 +128,10 @@
      }
  }
 
+ .about {
+     padding-top: 154px;
+ }
+
  .about__container {
      display: flex;
  }
@@ -129,6 +142,17 @@
 
  .about__title {
      margin-bottom: 40px;
+     font-style: normal;
+     font-weight: 700;
+     font-size: 44px;
+     color: #21243D;
+ }
+
+ .about__desc {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 16px;
+     color: #21243D;
  }
 
  .about__avatar {
@@ -143,6 +167,21 @@
      width: 100%;
      height: 100%;
      object-fit: cover;
+ }
+
+ .download-btn {
+     font-style: normal;
+     font-weight: 500;
+     font-size: 20px;
+     color: #ffffff;
+     background-color: #FF6464;
+     border: none;
+ }
+
+ .button {
+     width: 208px;
+     height: 47px;
+     margin: 38px 71px;
  }
 
  @media (max-width: 480px) {
@@ -176,6 +215,46 @@
 
  .recent-posts__articles {
      display: flex;
+ }
+
+ .recent-posts__article-title {
+     font-style: normal;
+     font-weight: 700;
+     font-size: 26px;
+     line-height: 38px;
+     color: #21243D;
+ }
+
+ .recent-posts__title {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 22px;
+     color: #21243D;
+ }
+
+ .recent-posts__link {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 16px;
+     color: #00A8CC;
+ }
+
+ .recent-posts__info {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 18px;
+     line-height: 26px;
+     color: #21243D;
+     padding: 17px;
+ }
+
+ .recent-posts__articles-content {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 16px;
+     line-height: 24px;
+     color: #21243D;
+
  }
 
  .recent-posts__article {
@@ -248,6 +327,14 @@
      object-fit: cover;
  }
 
+ .work__title {
+     font-style: normal;
+     font-weight: 700;
+     font-size: 30px;
+     color: #21243D;
+     padding-left: 18px;
+ }
+
  .work__subtitle {
      display: flex;
      align-items: center;
@@ -264,6 +351,20 @@
      padding: 5px 10px;
  }
 
+ .work_category {
+     font-style: normal;
+     font-weight: 400px;
+     font-size: 20px;
+     color: #8695A4;
+     padding-left: 26px;
+ }
+
+ .work__text {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 16px;
+     color: #21243D;
+ }
 
  @media (max-width: 480px) {
      .featured {
@@ -283,7 +384,7 @@
          margin-right: 18px;
          max-width: 339px;
      }
-     
+
      .work:last-child {
          margin-right: 0;
      }
@@ -298,24 +399,24 @@
      color: #21243D;
      margin-left: 18px;
  }
-  
-.blogs {
-    margin-top: 35px;
-}
+
+ .blogs {
+     margin-top: 35px;
+ }
 
  .blog {
-    border-bottom: 1px solid #E0E0E0 ;
-    padding: 35px 0;
+     border-bottom: 1px solid #E0E0E0;
+     padding: 35px 0;
  }
 
  .ds {
-  color: #8695A4;
+     color: #8695A4;
  }
 
  .blog__name {
-    margin-bottom: 40px;
+     margin-bottom: 40px;
  }
- 
+
  .footer {
      padding: 51px 0px 54px;
  }
@@ -333,6 +434,28 @@
      margin-right: 35px;
  }
 
+ .blog__title {
+     font-style: normal;
+     font-weight: 500;
+     font-size: 30px;
+     color: #21243D;
+ }
+
+ .blog__data {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 20px;
+     color: #21243D;
+     margin: 5px;
+ }
+
+ .blog__text {
+     font-style: normal;
+     font-weight: 400;
+     font-size: 16px;
+     color: #21243D;
+ }
+
  .social {
      display: flex;
  }
@@ -347,22 +470,27 @@
      width: 100%;
      font-size: 0px;
      background-size: cover;
-      background-repeat: no-repeat;
+     background-repeat: no-repeat;
  }
 
  .vk {
      background-image: url(../img/icons/vk.png);
-     
+
  }
 
  .telegram {
-    background-image: url(../img/icons/telegram.png);
+     background-image: url(../img/icons/telegram.png);
  }
 
  .github {
-    background-image: url(../img/icons/github.png);
+     background-image: url(../img/icons/github.png);
  }
 
  .ok {
-    background-image: url(../img/icons/ok.png);
+     background-image: url(../img/icons/ok.png);
+ }
+
+ .footer__text {
+     margin-top: 33px;
+     color: #21243D;
  }
